<resources>
    <string name="app_name">#64</string>
    <string name="account_name">Phan Hồ Phúc</string>
    <string name="rank">Thành viên vàng</string>
    <string name="diem">64</string>
    <string name="diemthanghang">100</string>
    <string name="soluongvoucher">9</string>
    <drawable name="avartar">@mipmap/ic_launcher</drawable>
    <drawable name="uudaithanhvien">@drawable/thanhvienvang</drawable>
    <drawable name="tichdiem">@drawable/tichdiem2</drawable>
    <drawable name="maqrcode">@drawable/qrcode</drawable>
    <string name="facebook_app_id">346580389301968</string>
    <string name="fb_login_protocol_scheme">fb346580389301968</string>

    <string name="ngayinbill">23/05/1999</string>
    <string name="mabill">Mt1702</string>
    <string name="tongtienbill">180000</string>
    <string name="mavoucher">8400</string>
    <string name="tienvoucher">50000</string>
    <string name="thanhtoan">130000</string>

</resources>
